plugins {
    alias(libs.plugins.protobuf)
}

description = 'Confluence Cloud REST API v2: entity protos for every API group, the ConfluenceEntity wrapper and crawl/live-update envelopes, the crawler core (REST client, JSON-to-proto mapper, ChangeSink SPI), and the ConfluenceService gRPC facade with a reflection-on Netty proxy launcher'

dependencies {
    api project(':protomolt-search-index-spi')
    api project(':protomolt-protobuf-validation')
    api libs.protobuf.java
    // ConfluenceClient and ConfluenceMapper read the REST v2 JSON payloads.
    api libs.jackson.databind
    // The gRPC facade: generated stubs live in this module.
    api libs.grpc.api
    api libs.grpc.stub
    api libs.grpc.protobuf

    // The standalone proxy launcher (Netty transport, reflection, health).
    implementation libs.grpc.netty.shaded
    implementation libs.grpc.services

    // KafkaChangeSink: the protomolt serde frames and validates on write; the
    // serde module leaves kafka-clients to the application.
    implementation project(':protomolt-kafka-serde')
    implementation libs.kafka.clients

    // RepoChangeSink: the DocumentService client surface and Document model.
    implementation project(':protomolt-repo-proto')

    // ConfluenceLuceneProjector: the Lucene mapper and index writer.
    implementation project(':protomolt-search-index-lucene')

    // ParquetChangeSink: batches changes into Parquet part files on S3.
    implementation project(':protomolt-emit-parquet-s3')

    // ProjectedParquetChangeSink: the MessageProjection engine builds the flat
    // ConfluenceContentRow from each change.
    implementation project(':protomolt-projection')

    // grpc-java's generated stubs annotate with @javax.annotation.Generated.
    compileOnly libs.javax.annotation.api

    // In-process transport for the facade tests.
    testImplementation libs.grpc.inprocess

    // ParquetChangeSink's test reads the flushed part files back with the example
    // Group reader, which materializes a Hadoop Configuration at run time.
    testImplementation libs.parquet.hadoop
    testCompileOnly libs.hadoop.client.api
    testRuntimeOnly 'org.apache.hadoop:hadoop-client-runtime:3.5.0'

    // The Kafka sink's integration test runs against a Redpanda container.
    testImplementation libs.testcontainers.redpanda
    testImplementation libs.testcontainers.junit.jupiter

    // ProjectedParquetChangeSinkIT runs against a LocalStack S3 container.
    testImplementation libs.testcontainers.localstack

    // Extract the indexing-hints and validation .proto for protoc imports.
    protobuf project(':protomolt-search-index-spi')
    protobuf project(':protomolt-protobuf-validation')
    // content_row.proto imports the projection extension options.
    protobuf project(':protomolt-projection')
}

protobuf {
    protoc {
        artifact = "com.google.protobuf:protoc:${libs.versions.protobuf.asProvider().get()}"
    }
    plugins {
        grpc {
            artifact = "io.grpc:protoc-gen-grpc-java:${libs.versions.grpc.get()}"
        }
    }
    generateProtoTasks {
        all().configureEach {
            plugins {
                grpc {}
            }
        }
    }
}

// The live smoke test hits the real workspace, so it never runs in the default
// test task (and is assumption-gated on credentials as a second guard).
tasks.named('test') {
    exclude 'ai/pipestream/proto/acquire/confluence/ConfluenceLiveSmokeIT.class'
}

// The projector and its test load Lucene (Java 25 bytecode), so this module's
// test JVM stays on the toolchain JDK like the lucene module's; -PtestJdk is
// ignored here.
tasks.withType(Test).configureEach {
    javaLauncher = javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

tasks.register('liveSmokeTest', Test) {
    description = 'One cheap read against the real Confluence workspace; needs CONFLUENCE_EMAIL + CONFLUENCE_API_TOKEN (or the CONFLUENCE_USER / CONFLUENCE_TOKEN aliases), skips otherwise'
    group = 'verification'
    useJUnitPlatform()
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    filter {
        includeTestsMatching 'ai.pipestream.proto.acquire.confluence.ConfluenceLiveSmokeIT'
    }
}
